# lean2py

./: .gitignore  README.md  merge_sort.py  pyproject.toml
.github/workflows/: ci.yml
bigo_gen/: __init__.py
bigo_gen/lean2py/: build.py  parser.py
examples/: Add.lean  ArraySum.lean  MergeSort.lean
lean2py/: __init__.py
lean2py/lean2py/: __init__.py  bindings.py  build.py  cli.py  errors.py  ffi.py  pipeline.py
scripts/: with-lean.ps1
tests/: test_bindings_generator.py  test_errors.py  test_parser.py
