[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigo-gen"
version = "0.1.0"
description = "Lean 4 → Python: build Lean, generate ctypes bindings, import and call from Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lean2py = "bigo_gen.lean2py.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
