[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lean2py"
version = "0.1.0"
description = "Lean 4 → Python: build Lean, generate ctypes bindings, import and call from Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
lean2py = "lean2py.lean2py.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "lean: requires lean and lake on PATH (integration)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["lean2py", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
